Enhance index.html with Telegram integration
Added Telegram WebApp support and improved structure.

Signed-off-by: farruxx0044 <145710387+farruxx0044@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -1,52 +1,86 @@
 <!DOCTYPE html>
 <html lang="uz">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+
+  <!-- iOS + Telegram uchun MUHIM -->
+  <meta name="viewport"
+        content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+
   <title>🐰 Quyoncha qishga tayyorlanmoqda</title>
-  <link rel="stylesheet" href="style.css">
+
+  <!-- Telegram Mini App -->
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
+
+  <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
 
-<h2>🐰 Quyoncha qishga tayyorlanmoqda</h2>
+  <!-- HAMMA O‘YIN SHU KONTEYNER ICHIDA -->
+  <div id="app">
 
-<div id="game-board"></div>
+    <h2>🐰 Quyoncha qishga tayyorlanmoqda</h2>
 
-<div class="controls">
-  <button id="startBtn">▶️ O‘yinni boshlash</button>
-  <button id="diceBtn" disabled>🎲 Kubik tashlash</button>
-  <button id="wheelBtn" disabled>🎡 Omad barabanini aylantirish</button>
-</div>
+    <!-- O‘YIN MAYDONI -->
+    <div id="game-board"></div>
 
-<p id="info">Avval o‘yinni boshlang</p>
-
-<div id="dice-display">🎲</div>
-
-<!-- ===== BARABAN OVERLAY ===== -->
-<div id="wheel-overlay" class="hidden">
-  <div id="wheel-center">
-
-    <!-- POINTER (QIMIRLAMAYDI) -->
-    <div id="wheel-pointer"></div>
-
-    <!-- AYLANADIGAN QISM -->
-    <div id="wheel-rotator">
-      <svg id="wheel" viewBox="0 0 300 300">
-        <g id="slices"></g>
-        <circle cx="150" cy="150" r="30" fill="#fff"/>
-        <text
-  x="150"
-  y="150"
-  text-anchor="middle"
-  dominant-baseline="middle"
-  font-size="18"
->🎯</text>
-
-      </svg>
+    <!-- BOSHQARUV -->
+    <div class="controls">
+      <button id="startBtn">▶️ O‘yinni boshlash</button>
+      <button id="wheelBtn" disabled>🎡 Omad barabanini aylantirish</button>
     </div>
 
-  </div>
-</div>
+    <!-- KUBIK DOIRA -->
+    <div id="dice-btn" class="dice-disabled">
+      🎲
+    </div>
 
-<script src="game.js"></script>
+    <!-- MA’LUMOT -->
+    <p id="info">Avval o‘yinni boshlang</p>
+
+    <!-- KUBIK NATIJA -->
+    <div id="dice-display">🎲</div>
+
+  </div>
+
+  <!-- ===== BARABAN OVERLAY ===== -->
+  <div id="wheel-overlay" class="hidden">
+    <div id="wheel-center">
+
+      <!-- POINTER -->
+      <div id="wheel-pointer"></div>
+
+      <!-- AYLANADIGAN QISM -->
+      <div id="wheel-rotator">
+        <svg id="wheel" viewBox="0 0 300 300">
+          <g id="slices"></g>
+
+          <!-- MARKAZ -->
+          <circle cx="150" cy="150" r="30" fill="#fff" />
+          <text x="150"
+                y="150"
+                text-anchor="middle"
+                dominant-baseline="middle"
+                font-size="18">
+            🎯
+          </text>
+        </svg>
+      </div>
+
+    </div>
+  </div>
+
+  <!-- GAME LOGIC -->
+  <script src="game.js"></script>
+
+  <!-- Telegram WebApp init -->
+  <script>
+    if (window.Telegram && Telegram.WebApp) {
+      Telegram.WebApp.ready();
+      Telegram.WebApp.expand();
+    }
+  </script>
+
 </body>
 </html>
